Newest changes at the top
Format: MM/DD/YYYY HH:MM - comment  

02/10/2016 10:49 - Created model classes for Players, Series, Transactions, and Collections
02/09/2016 14:27 - Created base controller
02/09/2016 13:50 - Added bot cards into the data folder
02/04/2016 18:07 - Created assets folder, data folders, and started _template.php
02/04/2016 15:01 - Reformatted and added to the README.md 
02/04/2016 14:38 - Fixed the system folder path
02/04/2016 14:20 - Added the starter package
02/04/2016 14:05 - Initial Setup