@@ -14,7 +14,7 @@
 Allman style  
 tab indentation  
 ucfirst (Upper case first) for classes and files  
-lowercase for bame elsewhere  
+lowercase for name elsewhere  
 words separated by underscore  
 underscore first for internal items  
 
