@@ -1,5 +1,16 @@
 <?php
-defined('BASEPATH') OR exit('No direct script access allowed');
+
+if (!defined('BASEPATH'))
+	exit('No direct script access allowed');
+
+// the menu basics (text navbar)
+$config['menu_choices'] = array(
+	'menudata' => array(
+		array('name' => 'Home', 'link' => '/Homepage'),
+		array('name' => 'Portfolio', 'link' => '/Portfolio'),
+                array('name' => 'Assembly', 'link' => '/Assembly'),
+	)
+);
 
 /*
 |--------------------------------------------------------------------------
