@@ -8,9 +8,9 @@ $query_builder = TRUE;
 $db['default'] = array(
 	'dsn'	=> '',
 	'hostname' => 'localhost',
-        'port'     => '4806',
 	'username' => 'root',
-	'password' => 'squeal',
+        'port' => '3306',
+	'password' => 'test',
 	'database' => 'botcards',
 	'dbdriver' => 'mysqli',
 	'dbprefix' => '',
