@@ -1,0 +1,43 @@
+<?php
+
+/**
+ * Our homepage. Show a panel with overall game status and displays bot pieces 
+ * player is aware of. Then another panel displays all other player's, their
+ * equity, and cash, as well as the ability to view each player's portfolio.
+ * 
+ * controllers/Welcome.php
+ *
+ * ------------------------------------------------------------------------
+ */
+class Assembly extends Application {
+
+	function __construct()
+	{
+		parent::__construct();
+	}
+
+	//-------------------------------------------------------------
+	//  The normal pages
+	//-------------------------------------------------------------
+
+
+
+        function candidatePieces()  
+	{
+		
+		//Assembly page showing candidate bot pieces
+
+
+	}
+        
+        function completedBot() 
+	{
+            
+                //Assembly page showing the fully built Bot
+            
+	}
+        
+}
+
+/* End of file Assembly.php */
+/* Location: application/controllers/Assembly.php */
