@@ -1,0 +1,35 @@
+<?php
+
+/**
+ * Our homepage. Show a panel with overall game status and displays bot pieces 
+ * player is aware of. Then another panel displays all other player's, their
+ * equity, and cash, as well as the ability to view each player's portfolio.
+ * 
+ * controllers/Welcome.php
+ *
+ * ------------------------------------------------------------------------
+ */
+class Portfolio extends Application {
+
+	function __construct()
+	{
+		parent::__construct();
+	}
+
+	//-------------------------------------------------------------
+	//  The normal pages
+	//-------------------------------------------------------------
+
+
+
+        function switchPortfolio() 
+	{
+            
+		//Change to a different player's portfolio to view
+            
+	}
+        
+}
+
+/* End of file Portfolio.php */
+/* Location: application/controllers/Portfolio.php */
