@@ -1,0 +1,11 @@
+<?php
+/*
+ * Menu navbar, just an unordered list
+ */
+?>
+<ul class="nav">
+    <h2>Cyberbots Web App</h2>
+    {menudata}
+    <li><a href="{link}">{name}</a></li>
+    {/menudata}
+</ul>
