@@ -3,3 +3,53 @@ body {}
 #content {width:100%; margin-left:5% auto;margin-right:5% auto;}
 #footer {font-size: small; font-style:italic;text-align:center;}
 .row>div {margin-bottom:10px;}
+
+
+
+
+#dashboard {
+    width: 98%;
+    height: 650px;
+    background: darkgray;
+    margin: auto;
+    padding: 10px;
+    display: inline-block;
+    //position : absolute;
+}
+
+.dashboardContainer {
+    width: 880px;
+    margin: auto;
+    height: 725px;
+    
+}
+
+.statusContainer {
+    width: 410px;
+    float: left;
+    height: 575px;
+    background-color: lightgray;
+    margin-right: 15px;
+    padding-left: 15px;
+}
+
+.playersContainer {
+    width: 410px;
+    float: left;
+    height: 575px;
+    background-color: lightgray;
+    margin-left: 15px; 
+    padding-left: 15px;
+}
+
+.rounds {
+    background-color: white;
+    margin: auto;
+    float: left;
+    width: 350px;
+    height: 450px;
+    margin-left: 15px;
+    padding-left: 15px;
+    margin-right: 15px;
+}
+
